--- a/B2C.html
+++ b/B2C.html
@@ -45,7 +45,7 @@
       <div class="signupBlock">
         <div class="panel panel-default">
           <div class="panel-body">
-            <p>Join JobCommander</p>
+            <p style="color:red;">Join JobCommander</p>
 
             <div id="api">
             </div>
