--- a/B2C.html
+++ b/B2C.html
@@ -11,39 +11,49 @@
     />
     <!-- CSS only -->
   </head>
+  <style>
+    #background_branding_container {
+      /* The image used */
+      background-image: url("https://dev.jobcommander.com/static/media/splash.46cf87c246839e946257.jpg");
+      height: 100%;
+      width: 100%;
+      background-size: cover;
+    }
+    .signupBlock {
+      width: 410px;
+      position: absolute;
+      top: 5px;
+      left: 0;
+      right: 0;
+      margin: auto;
+    }
+    p {
+        text-align: center;
+        font-size: 16px;
+        font-weight: 600;
+    }
+    .panel-body{
+        padding:25px
+    }
+  </style>
+
   <body>
     <div
       id="background_branding_container"
       data-tenant-branding-background-color="true"
-      style="
-        background-image: url(`https://dev.jobcommander.com/static/media/splash.46cf87c246839e946257.jpg`);
-        height: 100%;
-        width: 100%;
-        background-size: cover;
-      "
     >
-      <div
-        class="signupBlock"
-        style="
-          width: 410px;
-          position: absolute;
-          top: 5px;
-          left: 0;
-          right: 0;
-          margin: auto;
-        "
-      >
+      <div class="signupBlock">
         <div class="panel panel-default">
-          <div class="panel-body" style="padding: 25px">
-            <p style="text-align: center; font-size: 16px; font-weight: 600">
-              Join JobCommander
-            </p>
+          <div class="panel-body">
+            <p>Join JobCommander</p>
 
-            <div id="api"></div>
+            <div id="api">
+            </div>
           </div>
         </div>
       </div>
     </div>
   </body>
 </html>
+
 
