--- a/B2C.html
+++ b/B2C.html
@@ -35,7 +35,7 @@
     }
   </style>
 
-  <body>
+  <body background={"https://dev.jobcommander.com/static/media/splash.46cf87c246839e946257.jpg"}>
     <div
       id="background_branding_container"
       data-tenant-branding-background-color="true"
