--- a/B2C.html
+++ b/B2C.html
@@ -11,12 +11,8 @@
     />
   </head>
   <style>
-    #background_branding_container {
-      /* The image used */
-      background-image: url("https://dev.jobcommander.com/static/media/splash.46cf87c246839e946257.jpg");
-      height: 100%;
-      width: 100%;
-      background-size: cover;
+    body {
+      background: url("https://dev.jobcommander.com/static/media/splash.46cf87c246839e946257.jpg");
     }
     .signupBlock {
       width: 410px;
@@ -35,7 +31,7 @@
     }
   </style>
 
-  <body>
+  <body >
     <div
       id="background_branding_container"
       data-tenant-branding-background-color="true"
