--- a/B2C.html
+++ b/B2C.html
@@ -13,6 +13,7 @@
   <style>
     body {
       background: url("https://dev.jobcommander.com/static/media/splash.46cf87c246839e946257.jpg");
+      background-size:cover;
     }
     .signupBlock {
       width: 410px;
@@ -32,10 +33,7 @@
   </style>
 
   <body >
-    <div
-      id="background_branding_container"
-      data-tenant-branding-background-color="true"
-    >
+    <div data-tenant-branding-background-color="true">
       <div class="signupBlock">
         <div class="panel panel-default">
           <div class="panel-body">
