--- a/B2C.html
+++ b/B2C.html
@@ -35,13 +35,14 @@
   <body >
     <div data-tenant-branding-background-color="true">
       <div class="signupBlock">
- 
+        <div class="panel panel-default">
+          
           <div class="panel-body">
             <p>Join JobCommander</p>
 
             <div id="api"></div>
           </div>
-       
+        </div>
       </div>
     </div>
   </body>
