--- a/B2C.html
+++ b/B2C.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-   <link
+    <link
       href="https://ajax.aspnetcdn.com/ajax/bootstrap/3.3.5/css/bootstrap.min.css"
       rel="stylesheet"
       type="text/css"
@@ -13,35 +13,33 @@
   <style>
     body {
       background: url("https://dev.jobcommander.com/static/media/splash.46cf87c246839e946257.jpg");
-      background-size:cover;
+      background-size: cover;
     }
-    .signupBlock {
+
+    p {
+      text-align: center;
+      font-size: 16px;
+      font-weight: 600;
+    }
+    .panel {
       width: 410px;
       top: 5px;
       left: 0;
       right: 0;
       margin: auto;
     }
-    p {
-      text-align: center;
-      font-size: 16px;
-      font-weight: 600;
-    }
     .panel-body {
       padding: 25px;
     }
   </style>
 
-  <body >
+  <body>
     <div data-tenant-branding-background-color="true">
-      <div class="signupBlock">
-        <div class="panel panel-default">
-          
-          <div class="panel-body">
-            <p>Join JobCommander</p>
+      <div class="panel panel-default">
+        <div class="panel-body">
+          <p>Join JobCommander</p>
 
-            <div id="api"></div>
-          </div>
+          <div id="api"></div>
         </div>
       </div>
     </div>
