--- a/B2C.html
+++ b/B2C.html
@@ -18,18 +18,20 @@
 
     p {
       text-align: center;
-      font-size: 16px;
+      font-size: 5rem;
       font-weight: 600;
     }
     .panel {
-      width: 410px;
-      top: 5px;
-      left: 0;
-      right: 0;
-      margin: auto;
+     top:5%;
+     width: 30%;
+    margin: auto;
+    position: relative
     }
     .panel-body {
       padding: 25px;
+    }
+    .heading h1{
+      font-size:5rem;
     }
   </style>
 
