--- a/B2C.html
+++ b/B2C.html
@@ -22,17 +22,24 @@
       font-weight: 600;
     }
     .panel {
-     top:5%;
+     top:10px;
      width: 30%;
     margin: auto;
     position: relative
     }
     .panel-body {
-      padding: 25px;
+      padding: 45px;
     }
     .heading h1{
+      font-size:6rem;
+    }
+    .intro h2{
       font-size:5rem;
     }
+    .entry-item {
+      font-size:5rem;
+    }
+    
   </style>
 
   <body>
