--- a/B2C.html
+++ b/B2C.html
@@ -39,7 +39,11 @@
     .entry-item {
       font-size:5rem;
     }
-    
+    #next{
+    height: 8rem;
+    width: 30rem;
+    font-size: 5rem;
+    }
   </style>
 
   <body>
