--- a/B2C.html
+++ b/B2C.html
@@ -43,10 +43,18 @@
     height: 8rem;
     width: 30rem;
     font-size: 5rem;
+    background-color: rgba(19, 167, 61, 100);
+    border: 0px;
+    color: white;
+    border-radius: 1rem;
     }
     .divider{
     font-size:5rem
     }
+    .buttons{
+          display: flex;
+    justify-content: right;
+      margin-right: 4rem;}
   </style>
 
   <body>
