--- a/B2C.html
+++ b/B2C.html
@@ -47,8 +47,9 @@
     border: 0px;
     color: white;
     border-radius: 1rem;
+      margin-top: 3rem;
     }
-    .divider{
+    .divider h2{
     font-size:5rem
     }
     .buttons{
