--- a/B2C.html
+++ b/B2C.html
@@ -25,7 +25,8 @@
      top:10px;
      width: 25%;
     margin: auto;
-    position: relative
+    position: relative;
+    border-radius:2rem
     }
     .panel-body {
       padding: 45px;
@@ -38,6 +39,7 @@
     }
     .entry-item {
       font-size:5rem;
+      margin:2rem;
     }
     #next{
     height: 8rem;
