--- a/B2C.html
+++ b/B2C.html
@@ -29,7 +29,7 @@
     border-radius:2rem
     }
     .panel-body {
-      padding: 45px;
+      padding: 10rem;
     }
     .heading h1{
       font-size:6rem;
@@ -41,6 +41,8 @@
       font-size:5rem;
       margin:2rem;
     }
+    .entry-item input{
+    border-radius:2rem}
     #next{
     height: 8rem;
     width: 30rem;
