--- a/B2C.html
+++ b/B2C.html
@@ -54,7 +54,8 @@
       margin-top: 3rem;
     }
     .divider h2{
-    font-size:5rem
+    font-size:5rem;
+      text-align:center
     }
     .buttons{
           display: flex;
