--- a/B2C.html
+++ b/B2C.html
@@ -16,51 +16,57 @@
       background-size: cover;
     }
 
-    p {
+    .panel-body p {
       text-align: center;
       font-size: 5rem;
       font-weight: 600;
     }
     .panel {
-     top:10px;
-     width: 25%;
-    margin: auto;
-    position: relative;
-    border-radius:2rem
+      top: 10px;
+      width: 25%;
+      margin: auto;
+      position: relative;
+      border-radius: 2rem;
     }
     .panel-body {
       padding: 10rem;
     }
-    .heading h1{
-      font-size:6rem;
+    .heading h1 {
+      font-size: 6rem;
     }
-    .intro h2{
-      font-size:5rem;
+    .intro h2 {
+      font-size: 5rem;
     }
     .entry-item {
-      font-size:5rem;
-      margin:2rem;
+      font-size: 5rem;
+      margin: 2rem;
     }
-    .entry-item input{
-    border-radius:2rem}
-    #next{
-    height: 8rem;
-    width: 30rem;
-    font-size: 5rem;
-    background-color: rgba(19, 167, 61, 100);
-    border: 0px;
-    color: white;
-    border-radius: 1rem;
+    .entry-item input {
+      border-radius: 2rem;
+    }
+    #next {
+      height: 8rem;
+      width: 30rem;
+      font-size: 5rem;
+      background-color: rgba(19, 167, 61, 100);
+      border: 0px;
+      color: white;
+      border-radius: 1rem;
       margin-top: 3rem;
+      padding: 1rem;
     }
-    .divider h2{
-    font-size:5rem;
-      text-align:center
+    .divider h2 {
+      font-size: 5rem;
+      text-align: center;
     }
-    .buttons{
-          display: flex;
-    justify-content: right;
-      margin-right: 4rem;}
+    .buttons {
+      display: flex;
+      justify-content: right;
+      margin-right: 4rem;
+    }
+    .panel-body p {
+      font-size: 4rem;
+    }
   </style>
 
   <body>
@@ -75,6 +81,7 @@
     </div>
   </body>
 </html>
+
 
 
 
