--- a/B2C.html
+++ b/B2C.html
@@ -43,6 +43,7 @@
     }
     .entry-item input {
       border-radius: 2rem;
+      padding:1rem
     }
     #next {
       height: 8rem;
@@ -64,7 +65,7 @@
       justify-content: right;
       margin-right: 4rem;
     }
-    .panel-body p {
+    .create p {
       font-size: 4rem;
     }
   </style>
