--- a/B2C.html
+++ b/B2C.html
@@ -14,6 +14,7 @@
     body {
       background: url("https://dev.jobcommander.com/static/media/splash.46cf87c246839e946257.jpg");
       background-size: cover;
+      font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica Neue,Arial,Noto Sans,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol,Noto Color Emoji
     }
     .signup-container
     {
@@ -38,18 +39,23 @@
       padding: 10rem;
     }
     .heading h1 {
-      font-size: 6rem;
+      display:none
     }
     .intro h2 {
       font-size: 5rem;
     }
     .entry-item {
-      font-size: 5rem;
-      margin: 2rem;
+      font-size: 4rem;
+     margin: 3rem;
     }
     .entry-item input {
       border-radius: 2rem;
-      padding:1rem
+      padding:2rem;
+      border: 1px solid #d9d9d9;
+      width:100%
+    }
+    .entry-item label{
+    display:none
     }
     #next {
       height: 10rem;
