--- a/B2C.html
+++ b/B2C.html
@@ -57,6 +57,9 @@
     .entry-item label{
     display:none
     }
+    .password-label a{
+      margin-bottom:2rem;
+    }
     #next {
       height: 10rem;
       width: 30rem;
