--- a/B2C.html
+++ b/B2C.html
@@ -69,7 +69,7 @@
       border: 0px;
       color: white;
       border-radius: 1rem;
-      margin-top: 3rem;
+      margin: 3rem 0 rem
       padding: 1rem;
     }
     .divider h2 {
