--- a/B2C.html
+++ b/B2C.html
@@ -69,12 +69,13 @@
       border: 0px;
       color: white;
       border-radius: 1rem;
-      margin: 3rem 0 rem
+      margin: 3rem 0rem;
       padding: 1rem;
     }
     .divider h2 {
-      font-size: 5rem;
+      font-size: 4rem;
       text-align: center;
+      font-weight: 100;
     }
     .buttons {
       display: flex;
