--- a/B2C.html
+++ b/B2C.html
@@ -39,7 +39,8 @@
     }
     .intro h2 {
       font-size: 5rem;
-      text-align:center
+      text-align:center;
+      margin-bottom:5rem
     }
     .entry-item {
       font-size: 4.5rem;
