--- a/B2C.html
+++ b/B2C.html
@@ -55,9 +55,8 @@
     .entry-item label{
     display:none
     }
-    .password-label a{
-      margin-bottom:2rem;
-    }
+    #forgot-password{
+    margin-bottom:3rem}
     #next {
       height: 10rem;
       width: 30rem;
