--- a/B2C.html
+++ b/B2C.html
@@ -55,7 +55,7 @@
     .entry-item label{
     display:none
     }
-    #forgot-password{
+    #forgotPassword{
     margin-bottom:3rem}
     #next {
       height: 10rem;
