--- a/B2C.html
+++ b/B2C.html
@@ -22,6 +22,7 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
+      height:197rem
     }
     .panel-body p {
       text-align: center;
