--- a/B2C.html
+++ b/B2C.html
@@ -53,6 +53,8 @@
       border: 1px solid #d9d9d9;
       width:100%
     }
+    .entry-item input :hover{
+    border-color:rgba(19, 167, 61, 100)}
     .entry-item label{
     display:none
     }
