--- a/B2C.html
+++ b/B2C.html
@@ -33,15 +33,13 @@
       border-radius: 2rem;
     }
     .panel-body {
-      padding: 10rem;
+      padding: 5rem;
     }
     .heading h1 {
       display:none
     }
     .intro h2 {
-      font-size: 5rem;
-      text-align:center;
-      margin-bottom:5rem
+    display:none
     }
     .entry-item {
       font-size: 4.5rem;
