--- a/B2C.html
+++ b/B2C.html
@@ -51,8 +51,7 @@
       border: 1px solid #d9d9d9;
       width:100%
     }
-    .entry-item input :hover{
-    border-color:rgba(19, 167, 61, 100)}
+    .password-label a{ font-size:3rem}
     .entry-item label{
     display:none
     }
