--- a/B2C.html
+++ b/B2C.html
@@ -51,7 +51,7 @@
       border: 1px solid #d9d9d9;
       width:100%
     }
-    .password-label a{ font-size:4rem}
+    .entry-item .password-label a{ font-size:4rem}
     .entry-item label{
     display:none
     }
