--- a/B2CLogin.html
+++ b/B2CLogin.html
@@ -81,7 +81,7 @@
     }
     .create p a{
     margin-left:2rem}
-    .text-link a{
+    .text-link {
       font-size:3.5rem
     }
   </style>
@@ -90,7 +90,7 @@
     <div class='signup-container' data-tenant-branding-background-color="true">
       <div class="panel panel-default">
         <div class="panel-body">
-          <p>Welcome Back!</p>
+          <p>Join JobCommander</p>
 
           <div id="api"></div>
         </div>
