--- a/B2CLogin.html
+++ b/B2CLogin.html
@@ -26,7 +26,7 @@
     }
     .panel-body p {
       text-align: center;
-      font-size: 2rem;
+      font-size: 18px;
       font-weight: 600;
     }
     .panel {
@@ -42,7 +42,7 @@
     display:none
     }
     .entry-item {
-      font-size: 2rem;
+      font-size:18px;
      margin: 3rem;
     }
     .entry-item input {
@@ -58,7 +58,7 @@
     #next {
       height: 10rem;
       width: 30rem;
-      font-size: 2rem;
+      font-size: 18px;
       background-color: rgba(19, 167, 61, 100);
       border: 0px;
       color: white;
@@ -67,7 +67,7 @@
       padding: 1rem;
     }
     .divider h2 {
-      font-size: 2rem;
+      font-size: 18px;
       text-align: center;
       font-weight: 100;
     }
@@ -77,12 +77,12 @@
       margin-right: 4rem;
     }
     .create p {
-      font-size: 2rem;
+      font-size:18px;
     }
     .create p a{
     margin-left:2rem}
     .text-link {
-      font-size:2rem
+      font-size:18px
     }
   </style>
 
