--- a/B2CLogin.html
+++ b/B2CLogin.html
@@ -30,10 +30,10 @@
       font-weight: 600;
     }
     .panel {
-      border-radius: 2rem;
+      border-radius: 4px;
     }
     .panel-body {
-      padding: 5rem;
+      padding: 10px;
     }
     .heading h1 {
       display:none
@@ -43,11 +43,11 @@
     }
     .entry-item {
       font-size:18px;
-     margin: 3rem;
+     margin: 10px;
     }
     .entry-item input {
-      border-radius: 2rem;
-      padding:1.5rem;
+      border-radius: 4px;
+      padding:5px;
       border: 1px solid #d9d9d9;
       width:100%
     }
@@ -56,15 +56,15 @@
     display:none
     }
     #next {
-      height: 10rem;
-      width: 30rem;
+      height: 30px;
+      width: 200px;
       font-size: 18px;
       background-color: rgba(19, 167, 61, 100);
       border: 0px;
       color: white;
-      border-radius: 1rem;
-      margin: 3rem 0rem;
-      padding: 1rem;
+      border-radius: 4px;
+      margin: 10px 0px;
+      padding: 5px;
     }
     .divider h2 {
       font-size: 18px;
@@ -74,13 +74,13 @@
     .buttons {
       display: flex;
       justify-content: right;
-      margin-right: 4rem;
+      margin-right: 20px;
     }
     .create p {
       font-size:18px;
     }
     .create p a{
-    margin-left:2rem}
+    margin-left:10px}
     .text-link {
       font-size:18px
     }
