--- a/B2CLogin.html
+++ b/B2CLogin.html
@@ -22,12 +22,14 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    
+    height:657px;
+      width:30%
     }
     .panel-body p {
       text-align: center;
       font-size: 18px;
       font-weight: 600;
+      margin-top:20px
     }
     .panel {
       border-radius: 4px;
