--- a/B2CLogin.html
+++ b/B2CLogin.html
@@ -72,6 +72,7 @@
       font-size: 18px;
       text-align: center;
       font-weight: 100;
+      margin-top:0px
     }
     .buttons {
       display: flex;
