--- a/B2CLogin.html
+++ b/B2CLogin.html
@@ -22,7 +22,7 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    height:657px;
+    height:100vh;
       width:100%
     }
     .panel-body p {
