--- a/B2CLogin.html
+++ b/B2CLogin.html
@@ -44,15 +44,18 @@
     display:none
     }
     .entry-item {
-      font-size:18px;
      margin: 10px;
     }
     .entry-item input {
+      
+      font-size:18px;
       border-radius: 4px;
       padding:5px;
       border: 1px solid #d9d9d9;
       width:100%
     }
+    .error{
+    font-size:12px}
     .entry-item .password-label a{ font-size:16px}
     .entry-item label{
     display:none
