--- a/B2CLogin.html
+++ b/B2CLogin.html
@@ -14,22 +14,23 @@
     body {
       background: url("https://dev.jobcommander.com/static/media/splash.46cf87c246839e946257.jpg");
       background-size: cover;
-      font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica Neue,Arial,Noto Sans,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol,Noto Color Emoji
+      font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto,
+        Helvetica Neue, Arial, Noto Sans, sans-serif, Apple Color Emoji,
+        Segoe UI Emoji, Segoe UI Symbol, Noto Color Emoji;
     }
-    .signup-container
-    {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    height:100vh;
-      width:100%
+    .signup-container {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
+      height: 100vh;
+      width: 100%;
     }
     .panel-body p {
       text-align: center;
       font-size: 18px;
       font-weight: 600;
-      margin-top:20px
+      margin-top: 20px;
     }
     .panel {
       border-radius: 4px;
@@ -38,44 +39,47 @@
       padding: 10px;
     }
     .heading h1 {
-      display:none
+      display: none;
     }
     .intro h2 {
-    display:none
+      display: none;
     }
     .entry-item {
-     margin: 10px;
+      margin: 10px;
     }
     .entry-item input {
-      
-      font-size:18px;
+      font-size: 18px;
       border-radius: 4px;
-      padding:5px;
+      padding: 5px;
       border: 1px solid #d9d9d9;
-      width:100%
+      width: 100%;
     }
-    .error{
-    font-size:12px}
-    .entry-item .password-label a{ font-size:16px}
-    .entry-item label{
-    display:none
+    .error {
+      font-size: 12px;
+      color: red;
+    }
+    .entry-item .password-label a {
+      font-size: 16px;
+    }
+    .entry-item label {
+      display: none;
     }
     #next {
-     height: 36px;
-    width: 90px;
-    font-size: 18px;
-    background-color: rgba(19, 167, 61, 100);
-    border: 0px;
-    color: white;
-    border-radius: 4px;
-    margin: 10px 0px;
-    padding: 5px;
+      height: 36px;
+      width: 90px;
+      font-size: 18px;
+      background-color: rgba(19, 167, 61, 100);
+      border: 0px;
+      color: white;
+      border-radius: 4px;
+      margin: 10px 0px;
+      padding: 5px;
     }
     .divider h2 {
       font-size: 18px;
       text-align: center;
       font-weight: 100;
-      margin-top:0px
+      margin-top: 0px;
     }
     .buttons {
       display: flex;
@@ -83,17 +87,18 @@
       margin-right: 20px;
     }
     .create p {
-      font-size:16px;
+      font-size: 16px;
     }
-    .create p a{
-    margin-left:10px}
+    .create p a {
+      margin-left: 10px;
+    }
     .text-link {
-      font-size:18px
+      font-size: 18px;
     }
   </style>
 
   <body>
-    <div class='signup-container' data-tenant-branding-background-color="true">
+    <div class="signup-container" data-tenant-branding-background-color="true">
       <div class="panel panel-default">
         <div class="panel-body">
           <p>Join JobCommander</p>
