--- a/B2CLogin.html
+++ b/B2CLogin.html
@@ -26,18 +26,19 @@
       height: 100vh;
       width: 100%;
     }
-    .panel-body p {
-      text-align: center;
-      font-size: 18px;
-      font-weight: 600;
-      margin-top: 20px;
-    }
     .panel {
       border-radius: 4px;
     }
     .panel-body {
       padding: 10px;
     }
+    .panel-body p {
+      text-align: center;
+      font-size: 18px;
+      font-weight: 600;
+      margin-top: 20px;
+    }
+
     .heading h1 {
       display: none;
     }
@@ -54,9 +55,10 @@
       border: 1px solid #d9d9d9;
       width: 100%;
     }
-    .error {
+    .error p {
       font-size: 12px;
       color: red;
+      text-align: left;
     }
     .entry-item .password-label a {
       font-size: 16px;
@@ -109,3 +111,4 @@
     </div>
   </body>
 </html>
+
