--- a/B2CLogin.html
+++ b/B2CLogin.html
@@ -101,7 +101,7 @@
     <div class="signup-container" data-tenant-branding-background-color="true">
       <div class="panel panel-default">
         <div class="panel-body">
-          <p>Join JobCommander</p>
+          <p>Welcome Back!</p>
 
           <div id="api"></div>
         </div>
