--- a/B2CSignup.html
+++ b/B2CSignup.html
@@ -22,15 +22,15 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
-      height:197rem
+      height:100vh
     }
     .panel-body p {
       text-align: center;
-      font-size: 5rem;
+      font-size: 18px;
       font-weight: 600;
     }
     .panel {
-      border-radius: 2rem;
+      border-radius: 4px;
     }
     .panel-body {
       padding: 5rem;
@@ -38,7 +38,7 @@
     .heading h1 {
       display:none
     }
-    .intro h2 {
+    .intro p {
     display:none
     }
     .entry-item {
