--- a/B2CSignup.html
+++ b/B2CSignup.html
@@ -41,20 +41,20 @@
     .intro p {
     display:none
     }
-    .entry-item {
-      font-size: 4.5rem;
-     margin: 3rem;
+    .attr ul {
+      list-style-type:none
     }
-    .entry-item input {
+    .attrEntry label a{
+    display:none
+    }
+    .attrEntry input {
       border-radius: 2rem;
       padding:1.5rem;
       border: 1px solid #d9d9d9;
       width:100%
     }
     .entry-item .password-label a{ font-size:4rem}
-    .entry-item label{
-    display:none
-    }
+    
     #next {
       height: 10rem;
       width: 30rem;
