--- a/B2CSignup.html
+++ b/B2CSignup.html
@@ -21,7 +21,6 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    flex-direction: column;
     }
     .panel-body p {
       text-align: center;
@@ -32,7 +31,7 @@
       border-radius: 4px;
     }
     .panel-body {
-      padding: 5rem;
+      padding: 15px;
     }
     .heading h1 {
       display:none
@@ -43,7 +42,10 @@
     .attr ul {
       list-style-type:none
     }
-    .attrEntry label a{
+    .attrEntry label{
+    display:none
+    }
+    .attrEntry a{
     display:none
     }
     .attrEntry input {
