--- a/B2CSignup.html
+++ b/B2CSignup.html
@@ -42,19 +42,19 @@
     .attr ul {
       list-style-type:none
     }
-    .attrEntry label{
+    .attr-entry label{
     display:none
     }
-    .attrEntry a{
+    .attr-entry a{
     display:none
     }
-    .attrEntry input {
-      border-radius: 2rem;
-      padding:1.5rem;
+    .attr-entry input {
+      border-radius: 4px;
+      padding:10px;
       border: 1px solid #d9d9d9;
       width:100%
     }
-    .entry-item .password-label a{ font-size:4rem}
+    .attr-entry .password-label a{ font-size:16px}
     
     #next {
       height: 10rem;
