--- a/B2CSignup.html
+++ b/B2CSignup.html
@@ -42,19 +42,19 @@
     .attr ul {
       list-style-type:none
     }
-    .attr-entry label{
+    .attrEntry label{
     display:none
     }
-    .attr-entry a{
+    .attrEntry a{
     display:none
     }
-    .attr-entry input {
+    .attrEntry input {
       border-radius: 4px;
       padding:10px;
       border: 1px solid #d9d9d9;
       width:100%
     }
-    .attr-entry .password-label a{ font-size:16px}
+    .attrEntry .password-label a{ font-size:16px}
     
     #next {
       height: 10rem;
