--- a/B2CSignup.html
+++ b/B2CSignup.html
@@ -40,7 +40,8 @@
     display:none
     }
     .attr ul {
-      list-style-type:none
+      list-style-type:none;
+      padding-left:0px
     }
     .attrEntry label{
     display:none
@@ -50,12 +51,10 @@
     }
     .attrEntry input {
       border-radius: 4px;
-      padding:10px;
-      border: 1px solid #d9d9d9;
-      width:100%
+    padding: 7px;
+    border: 1px solid #d9d9d9;
+    width: 100%;
     }
-    .attrEntry .password-label a{ font-size:16px}
-    
     #next {
       height: 10rem;
       width: 30rem;
