--- a/B2CSignup.html
+++ b/B2CSignup.html
@@ -43,6 +43,9 @@
       list-style-type:none;
       padding-left:0px
     }
+    .attr li {
+      margin-bottom:4px
+    }
     .attrEntry label{
     display:none
     }
