--- a/B2CSignup.html
+++ b/B2CSignup.html
@@ -44,7 +44,7 @@
       padding-left:0px
     }
     .attr li {
-      margin-bottom:4px
+      margin-bottom:6px
     }
     .attrEntry label{
     display:none
@@ -58,26 +58,21 @@
     border: 1px solid #d9d9d9;
     width: 100%;
     }
-    #next {
-      height: 10rem;
-      width: 30rem;
-      font-size: 5rem;
-      background-color: rgba(19, 167, 61, 100);
-      border: 0px;
-      color: white;
-      border-radius: 1rem;
-      margin: 3rem 0rem;
-      padding: 1rem;
-    }
-    .divider h2 {
-      font-size: 4rem;
-      text-align: center;
-      font-weight: 100;
-    }
     .buttons {
       display: flex;
       justify-content: right;
       margin-right: 4rem;
+    }
+     #continue #cancel {
+      height: 36px;
+      width: 90px;
+      font-size: 18px;
+      background-color: rgba(19, 167, 61, 100);
+      border: 0px;
+      color: white;
+      border-radius: 4px;
+      margin: 10px 0px;
+      padding: 5px;
     }
     .create p {
       font-size: 4rem;
