--- a/B2CSignup.html
+++ b/B2CSignup.html
@@ -63,7 +63,7 @@
       justify-content: right;
       margin-right: 4rem;
     }
-     #continue #cancel {
+     #continue #cancel .sendCode{
       height: 36px;
       width: 90px;
       font-size: 18px;
