--- a/B2CSignup.html
+++ b/B2CSignup.html
@@ -59,9 +59,9 @@
     width: 100%;
     }
     .buttons {
-      display: flex;
+       display: flex;
       justify-content: right;
-      margin-right: 4rem;
+      margin-right: 20px;
     }
      #continue #cancel .sendCode{
       height: 36px;
