--- a/B2CSignup.html
+++ b/B2CSignup.html
@@ -72,13 +72,12 @@
     border-radius: 4px;
     margin: 10px 4px;
     }
-    .create p {
-      font-size: 4rem;
-    }
-    .create p a{
-    margin-left:2rem}
-    .text-link a{
-      font-size:3.5rem
+    .sendCode .verifyCode .changeClaims .sendNewCode{
+    background-color: rgba(19, 167, 61, 100);
+    border: 0px;
+    color: white;
+    border-radius: 4px;
+    margin: 10px 4px;
     }
   </style>
 
