font-size updated

--- a/B2CSignup.html
+++ b/B2CSignup.html
@@ -73,6 +73,7 @@
     margin: 10px 4px;
     }
     .sendCode .verifyCode .changeClaims .sendNewCode{
+      font-size: 15px;
     background-color: rgba(19, 167, 61, 100);
     border: 0px;
     color: white;
