--- a/B2CSignup.html
+++ b/B2CSignup.html
@@ -72,7 +72,7 @@
     border-radius: 4px;
     margin: 10px 4px;
     }
-    .sendCode .verifyCode .changeClaims .sendNewCode{
+    .sendCode{
       font-size: 15px;
     background-color: rgba(19, 167, 61, 100);
     border: 0px;
