--- a/B2CSignup.html
+++ b/B2CSignup.html
@@ -62,23 +62,14 @@
        display: flex;
       justify-content: right;
     }
-    .sendCode{
-    font-size: 15px;
-    background-color: rgba(19, 167, 61, 100);
-    border: 0px;
-    color: white;
-    border-radius: 4px;
-    margin: 10px 4px;
-    }
      .buttons button{
-    height: 34px;
-    width: 85px;
-    font-size: 16px;
+        font-size: 16px;
     background-color: rgba(19, 167, 61, 100);
     border: 0px;
     color: white;
     border-radius: 4px;
     margin: 10px 4px;
+    padding: 5px 10px;
     }
     
   </style>
