--- a/B2CSignup.html
+++ b/B2CSignup.html
@@ -29,6 +29,7 @@
     }
     .panel {
       border-radius: 4px;
+      margin-top: 5px;
     }
     .panel-body {
       padding: 15px;
@@ -63,7 +64,7 @@
       justify-content: right;
     }
      .buttons button{
-        font-size: 16px;
+    font-size: 16px;
     background-color: rgba(19, 167, 61, 100);
     border: 0px;
     color: white;
