--- a/B2CSignup.html
+++ b/B2CSignup.html
@@ -49,13 +49,13 @@
     .attr li {
       margin-bottom:6px
     }
-    .attrEntry label{
+    .entry-item .attrEntry label{
     display:none
     }
-    .attrEntry a{
+    .entry-item .attrEntry a{
     display:none
     }
-    .attrEntry input {
+    .entry-item .attrEntry input {
       border-radius: 4px;
     padding: 7px;
     border: 1px solid #d9d9d9;
