--- a/B2CSignup.html
+++ b/B2CSignup.html
@@ -61,6 +61,9 @@
     border: 1px solid #d9d9d9;
     width: 100%;
     }
+    .divider h2 {
+    text-align:center;
+    font-size:16px;}
     .buttons {
        display: flex;
       justify-content: right;
