--- a/B2CSignup.html
+++ b/B2CSignup.html
@@ -39,7 +39,10 @@
     .heading h1 {
       display:none
     }
-    .intro p h2 {
+    .intro p {
+    display:none
+    }
+    .intro h2 {
     display:none
     }
     .attr ul {
@@ -49,13 +52,25 @@
     .attr li {
       margin-bottom:6px
     }
-    .entry-item .attrEntry label{
+     .attrEntry label{
     display:none
     }
-    .entry-item .attrEntry a{
+    .entry-item label {
     display:none
     }
-    .entry-item .attrEntry input {
+    .attrEntry a{
+    display:none
+    }
+    .entry-item  a{
+    display:none
+    }
+    .attrEntry input {
+      border-radius: 4px;
+    padding: 7px;
+    border: 1px solid #d9d9d9;
+    width: 100%;
+    }
+    .entry-item input {
       border-radius: 4px;
     padding: 7px;
     border: 1px solid #d9d9d9;
