--- a/B2CSignup.html
+++ b/B2CSignup.html
@@ -23,6 +23,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+      height:100vh;
     }
     .panel-body p {
       text-align: center;
