--- a/B2CSignup.html
+++ b/B2CSignup.html
@@ -71,7 +71,19 @@
     border: 1px solid #d9d9d9;
     width: 100%;
     }
+    .attrEntry select {
+      border-radius: 4px;
+    padding: 7px;
+    border: 1px solid #d9d9d9;
+    width: 100%;
+    }
     .entry-item input {
+      border-radius: 4px;
+    padding: 7px;
+    border: 1px solid #d9d9d9;
+    width: 100%;
+    }
+    .entry-item select {
       border-radius: 4px;
     padding: 7px;
     border: 1px solid #d9d9d9;
