--- a/B2CSignup.html
+++ b/B2CSignup.html
@@ -77,6 +77,9 @@
     border: 1px solid #d9d9d9;
     width: 100%;
     }
+    .verificationControlContent li{
+      margin-bottom:5px
+    }
     .entry-item input {
       border-radius: 4px;
     padding: 7px;
