--- a/B2CSignup.html
+++ b/B2CSignup.html
@@ -76,9 +76,7 @@
     padding: 7px;
     border: 1px solid #d9d9d9;
     width: 100%;
-    }
-    .verificationControlContent li{
-      margin-bottom:5px
+      margin-bottom:6px;
     }
     .entry-item input {
       border-radius: 4px;
@@ -91,6 +89,7 @@
     padding: 7px;
     border: 1px solid #d9d9d9;
     width: 100%;
+    margin-bottom:6px;
     }
     .divider h2 {
       margin-top:0px;
