--- a/B2CSignup.html
+++ b/B2CSignup.html
@@ -4,8 +4,14 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
-    <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
+    <script
+      crossorigin
+      src="https://unpkg.com/react@18/umd/react.development.js"
+    ></script>
+    <script
+      crossorigin
+      src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"
+    ></script>
     <link
       href="https://ajax.aspnetcdn.com/ajax/bootstrap/3.3.5/css/bootstrap.min.css"
       rel="stylesheet"
@@ -16,14 +22,15 @@
     body {
       background: url("https://dev.jobcommander.com/static/media/splash.46cf87c246839e946257.jpg");
       background-size: cover;
-      font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica Neue,Arial,Noto Sans,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol,Noto Color Emoji
+      font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto,
+        Helvetica Neue, Arial, Noto Sans, sans-serif, Apple Color Emoji,
+        Segoe UI Emoji, Segoe UI Symbol, Noto Color Emoji;
     }
-    .signup-container
-    {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-      height:100vh;
+    .signup-container {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
     }
     .panel-body p {
       text-align: center;
@@ -38,85 +45,87 @@
       padding: 15px;
     }
     .heading h1 {
-      display:none
+      display: none;
     }
     .intro p {
-    display:none
+      display: none;
     }
     .intro h2 {
-    display:none
+      display: none;
     }
     .attr ul {
-      list-style-type:none;
-      padding-left:0px
+      list-style-type: none;
+      padding-left: 0px;
     }
     .attr li {
-      margin-bottom:6px
+      margin-bottom: 6px;
     }
-     .attrEntry label{
-    display:none
+    .attrEntry label {
+      display: none;
     }
     .entry-item label {
-    display:none
+      display: none;
     }
-    .attrEntry a{
-    display:none
+    .attrEntry a {
+      display: none;
     }
-    .entry-item  a{
-    display:none
+    .entry-item a {
+      display: none;
     }
     .attrEntry input {
       border-radius: 4px;
-    padding: 7px;
-    border: 1px solid #d9d9d9;
-    width: 100%;
+      padding: 7px;
+      border: 1px solid #d9d9d9;
+      width: 100%;
     }
     .attrEntry select {
       border-radius: 4px;
-    padding: 7px;
-    border: 1px solid #d9d9d9;
-    width: 100%;
-      margin-bottom:6px;
+      padding: 7px;
+      border: 1px solid #d9d9d9;
+      width: 100%;
+      margin-bottom: 6px;
     }
     .entry-item input {
       border-radius: 4px;
-    padding: 7px;
-    border: 1px solid #d9d9d9;
-    width: 100%;
+      padding: 7px;
+      border: 1px solid #d9d9d9;
+      width: 100%;
     }
     .entry-item select {
       border-radius: 4px;
-    padding: 7px;
-    border: 1px solid #d9d9d9;
-    width: 100%;
-    margin-bottom:6px;
+      padding: 7px;
+      border: 1px solid #d9d9d9;
+      width: 100%;
+      margin-bottom: 6px;
     }
     .divider h2 {
-      margin-top:0px;
-    text-align:center;
-    font-size:16px;}
+      margin-top: 0px;
+      text-align: center;
+      font-size: 16px;
+    }
     .buttons {
-       display: flex;
+      display: flex;
       justify-content: right;
     }
-     .buttons button{
-    font-size: 16px;
-    background-color: rgba(19, 167, 61, 100);
-    border: 0px;
-    color: white;
-    border-radius: 4px;
-    margin: 10px 4px;
-    padding: 5px 10px;
+    .buttons button {
+      font-size: 16px;
+      background-color: rgba(19, 167, 61, 100);
+      border: 0px;
+      color: white;
+      border-radius: 4px;
+      margin: 10px 4px;
+      padding: 5px 10px;
     }
     .create p a {
       margin-left: 10px;
     }
-    .error{
-    color:red}
+    .error {
+      color: red;
+    }
   </style>
 
   <body>
-    <div class='signup-container' data-tenant-branding-background-color="true">
+    <div class="signup-container" data-tenant-branding-background-color="true">
       <div class="panel panel-default">
         <div class="panel-body">
           <p>Join JobCommander</p>
@@ -127,3 +136,4 @@
     </div>
   </body>
 </html>
+
