--- a/B2CSignup.html
+++ b/B2CSignup.html
@@ -72,30 +72,13 @@
     .entry-item a {
       display: none;
     }
-    .attrEntry input {
+    .attrEntry input, .attrEntry select,.entry-item input,.entry-item select {
       border-radius: 4px;
       padding: 7px;
       border: 1px solid #d9d9d9;
       width: 100%;
     }
-    .attrEntry select {
-      border-radius: 4px;
-      padding: 7px;
-      border: 1px solid #d9d9d9;
-      width: 100%;
-      margin-bottom: 6px;
-    }
-    .entry-item input {
-      border-radius: 4px;
-      padding: 7px;
-      border: 1px solid #d9d9d9;
-      width: 100%;
-    }
-    .entry-item select {
-      border-radius: 4px;
-      padding: 7px;
-      border: 1px solid #d9d9d9;
-      width: 100%;
+    .attrEntry select,.entry-item select {
       margin-bottom: 6px;
     }
     .divider h2 {
