--- a/B2CSignup.html
+++ b/B2CSignup.html
@@ -47,10 +47,7 @@
     .heading h1 {
       display: none;
     }
-    .intro p {
-      display: none;
-    }
-    .intro h2 {
+    .intro h2 , .intro p {
       display: none;
     }
     .attr ul {
@@ -60,16 +57,10 @@
     .attr li {
       margin-bottom: 6px;
     }
-    .attrEntry label {
+    .attrEntry label,.entry-item label {
       display: none;
     }
-    .entry-item label {
-      display: none;
-    }
-    .attrEntry a {
-      display: none;
-    }
-    .entry-item a {
+    .attrEntry a ,  .entry-item a {
       display: none;
     }
     .attrEntry input, .attrEntry select,.entry-item input,.entry-item select {
