--- a/B2CSignup.html
+++ b/B2CSignup.html
@@ -69,6 +69,9 @@
       border: 1px solid #d9d9d9;
       width: 100%;
     }
+    .entry-item input {
+      margin-bottom:6px
+    }
     .attrEntry select,.entry-item select {
       margin-bottom: 6px;
     }
