--- a/B2CSignup.html
+++ b/B2CSignup.html
@@ -20,29 +20,42 @@
   </head>
   <style>
     body {
-      background: url("https://dev.jobcommander.com/static/media/splash.46cf87c246839e946257.jpg");
-      background-size: cover;
+/*       background: url("https://dev.jobcommander.com/static/media/splash.46cf87c246839e946257.jpg");
+      background-size: cover; */
       font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto,
         Helvetica Neue, Arial, Noto Sans, sans-serif, Apple Color Emoji,
         Segoe UI Emoji, Segoe UI Symbol, Noto Color Emoji;
     }
-    .signup-container {
-      display: flex;
-      justify-content: center;
+    .auth-container{
       align-items: center;
-      height: 100vh;
+    display: flex;
+    height: 100vh;
+    justify-content: center
     }
-    .panel-body p {
+    .auth-container:before{
+          background-image: url("https://dev.jobcommander.com/static/media/splash.46cf87c246839e946257.jpg");;
+    background-position: 50%;
+    background-repeat: no-repeat;
+    background-size: cover;
+    content: " ";
+    height: 100%;
+    left: 0;
+    position: absolute;
+    top: 0;
+    width: 100%;
+    z-index: -1;
+    }
+    .container{
+    margin: 5px auto auto;
+    }
+    .signup-container {
+      background-color: #fff;
+    border-radius: 2px;
+    padding: 25px;
+      width:350px;
       text-align: center;
       font-size: 16px;
       font-weight: 600;
-    }
-    .panel {
-      border-radius: 4px;
-      margin-top: 5px;
-    }
-    .panel-body {
-      padding: 15px;
     }
     .heading h1 {
       display: none;
@@ -102,14 +115,15 @@
   </style>
 
   <body>
-    <div class="signup-container" data-tenant-branding-background-color="true">
-      <div class="panel panel-default">
-        <div class="panel-body">
-          <p>Join JobCommander</p>
+    <div class="auth-container">
+      <div class="container">
+           <div class="signup-container" data-tenant-branding-background-color="true">
+              <p>Join JobCommander</p>
 
-          <div id="api"></div>
-        </div>
+               <div id="api"></div>
+            </div>
       </div>
+    </div>
     </div>
   </body>
 </html>
