--- a/B2CSignup.html
+++ b/B2CSignup.html
@@ -12,11 +12,11 @@
       crossorigin
       src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"
     ></script>
-    <link
+<!--     <link
       href="https://ajax.aspnetcdn.com/ajax/bootstrap/3.3.5/css/bootstrap.min.css"
       rel="stylesheet"
       type="text/css"
-    />
+    /> -->
   </head>
   <style>
     body {
