--- a/B2CSignup.html
+++ b/B2CSignup.html
@@ -30,7 +30,8 @@
       align-items: center;
     display: flex;
     height: 100vh;
-    justify-content: center
+    justify-content: center;
+      overflow: auto
     }
     .auth-container:before{
           background-image: url("https://dev.jobcommander.com/static/media/splash.46cf87c246839e946257.jpg");;
