--- a/B2CSignup.html
+++ b/B2CSignup.html
@@ -44,7 +44,8 @@
     top: 0;
     width: 100%;
     z-index: -1;
-         overflow: auto
+         overflow: auto;
+        font-size: 16px;
     }
     .container{
     margin: 5px auto auto;
@@ -55,7 +56,7 @@
     padding: 25px;
       width:350px;
       text-align: center;
-      font-size: 16px;
+    
     }
     .heading h1 {
       display: none;
