--- a/B2CSignup.html
+++ b/B2CSignup.html
@@ -116,7 +116,8 @@
   </style>
 
   <body>
-    <div class="auth-container">
+    <div class="root">
+       <div class="auth-container">
       <div class="container">
            <div class="signup-container" data-tenant-branding-background-color="true">
               <p>Join JobCommander</p>
@@ -126,6 +127,8 @@
       </div>
     </div>
     </div>
+    </div>
+   
   </body>
 </html>
 
