--- a/B2CSignup.html
+++ b/B2CSignup.html
@@ -31,6 +31,7 @@
     display: flex;
     height: 100vh;
     justify-content: center;
+      font-size:16px
     }
     .auth-container:before{
           background-image: url("https://dev.jobcommander.com/static/media/splash.46cf87c246839e946257.jpg");;
