--- a/B2CSignup.html
+++ b/B2CSignup.html
@@ -12,57 +12,45 @@
       crossorigin
       src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"
     ></script>
-<!--     <link
+    <link
       href="https://ajax.aspnetcdn.com/ajax/bootstrap/3.3.5/css/bootstrap.min.css"
       rel="stylesheet"
       type="text/css"
-    /> -->
+    />
   </head>
   <style>
     body {
-/*       background: url("https://dev.jobcommander.com/static/media/splash.46cf87c246839e946257.jpg");
-      background-size: cover; */
+      background: url("https://dev.jobcommander.com/static/media/splash.46cf87c246839e946257.jpg");
+      background-size: cover;
       font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto,
         Helvetica Neue, Arial, Noto Sans, sans-serif, Apple Color Emoji,
         Segoe UI Emoji, Segoe UI Symbol, Noto Color Emoji;
     }
-    .auth-container{
-      align-items: center;
-    display: flex;
-    height: 100vh;
-    justify-content: center;
-      font-size:16px
-    }
-    .auth-container:before{
-          background-image: url("https://dev.jobcommander.com/static/media/splash.46cf87c246839e946257.jpg");;
-    background-position: 50%;
-    background-repeat: no-repeat;
-    background-size: cover;
-    content: " ";
-    height: 100%;
-    left: 0;
-    position: absolute;
-    top: 0;
-    width: 100%;
-    z-index: -1;
-         overflow: auto;
-        font-size: 16px;
-    }
-    .container{
-    margin: 5px auto auto;
-    }
     .signup-container {
-      background-color: #fff;
-    border-radius: 2px;
-    padding: 25px;
-      width:350px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+    }
+    .panel-body p {
       text-align: center;
-    
+      font-size: 16px;
+      font-weight: 600;
+    }
+    .panel {
+      border-radius: 4px;
+      margin-top: 5px;
+    }
+    .panel-body {
+      padding: 15px;
     }
     .heading h1 {
       display: none;
     }
-    .intro h2 , .intro p {
+    .intro p {
+      display: none;
+    }
+    .intro h2 {
       display: none;
     }
     .attr ul {
@@ -72,22 +60,42 @@
     .attr li {
       margin-bottom: 6px;
     }
-    .attrEntry label,.entry-item label {
+    .attrEntry label {
       display: none;
     }
-    .attrEntry a ,  .entry-item a {
+    .entry-item label {
       display: none;
     }
-    .attrEntry input, .attrEntry select,.entry-item input,.entry-item select {
+    .attrEntry a {
+      display: none;
+    }
+    .entry-item a {
+      display: none;
+    }
+    .attrEntry input {
       border-radius: 4px;
       padding: 7px;
       border: 1px solid #d9d9d9;
       width: 100%;
     }
-    .entry-item input {
-      margin-bottom:6px
+    .attrEntry select {
+      border-radius: 4px;
+      padding: 7px;
+      border: 1px solid #d9d9d9;
+      width: 100%;
+      margin-bottom: 6px;
     }
-    .attrEntry select,.entry-item select {
+    .entry-item input {
+      border-radius: 4px;
+      padding: 7px;
+      border: 1px solid #d9d9d9;
+      width: 100%;
+    }
+    .entry-item select {
+      border-radius: 4px;
+      padding: 7px;
+      border: 1px solid #d9d9d9;
+      width: 100%;
       margin-bottom: 6px;
     }
     .divider h2 {
@@ -117,19 +125,14 @@
   </style>
 
   <body>
-    <div class="root">
-       <div class="auth-container">
-      <div class="container">
-           <div class="signup-container" data-tenant-branding-background-color="true">
-              <p>Join JobCommander</p>
+    <div class="signup-container" data-tenant-branding-background-color="true">
+      <div class="panel panel-default">
+        <div class="panel-body">
+          <p>Join JobCommander</p>
 
-               <div id="api"></div>
-            </div>
+          <div id="api"></div>
+        </div>
       </div>
     </div>
-    </div>
-    </div>
-   
   </body>
 </html>
-
