--- a/B2CSignup.html
+++ b/B2CSignup.html
@@ -20,8 +20,8 @@
   </head>
   <style>
     body {
-      background: url("https://dev.jobcommander.com/static/media/splash.46cf87c246839e946257.jpg");
-      background-size: cover;
+/*       background: url("https://dev.jobcommander.com/static/media/splash.46cf87c246839e946257.jpg");
+      background-size: cover; */
       font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto,
         Helvetica Neue, Arial, Noto Sans, sans-serif, Apple Color Emoji,
         Segoe UI Emoji, Segoe UI Symbol, Noto Color Emoji;
