--- a/B2CSignup.html
+++ b/B2CSignup.html
@@ -20,8 +20,8 @@
   </head>
   <style>
     body {
-      background: url("https://dev.jobcommander.com/static/media/splash.46cf87c246839e946257.jpg");
-      background-size: cover;
+/*       background: url("https://dev.jobcommander.com/static/media/splash.46cf87c246839e946257.jpg");
+      background-size: cover; */
       font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto,
         Helvetica Neue, Arial, Noto Sans, sans-serif, Apple Color Emoji,
         Segoe UI Emoji, Segoe UI Symbol, Noto Color Emoji;
@@ -32,7 +32,7 @@
       height: 100vh;
       justify-content: center;
     }
-/*     .container:before{
+    .container:before{
           background-image: url(/static/media/splash.46cf87c….jpg);
     background-position: 50%;
     background-repeat: no-repeat;
@@ -44,7 +44,7 @@
     top: 0;
     width: 100%;
     z-index: -1;
-    } */
+    }
     .signup-container {
       margin: 5px auto auto;
     }
