--- a/B2CSignup.html
+++ b/B2CSignup.html
@@ -20,8 +20,9 @@
   </head>
   <style>
     body {
-/*       background: url("https://dev.jobcommander.com/static/media/splash.46cf87c246839e946257.jpg");
-      background-size: cover; */
+      background: url("https://dev.jobcommander.com/static/media/splash.46cf87c246839e946257.jpg");
+      background-repeat: no-repeat;
+    background-size: cover;
       font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto,
         Helvetica Neue, Arial, Noto Sans, sans-serif, Apple Color Emoji,
         Segoe UI Emoji, Segoe UI Symbol, Noto Color Emoji;
@@ -29,21 +30,7 @@
     .container{
       align-items: center;
       display: flex;
-      height: 100vh;
       justify-content: center;
-    }
-    .container:before{
-          background-image: url(/static/media/splash.46cf87c….jpg);
-    background-position: 50%;
-    background-repeat: no-repeat;
-    background-size: cover;
-    content: " ";
-    height: 100%;
-    left: 0;
-    position: absolute;
-    top: 0;
-    width: 100%;
-    z-index: -1;
     }
     .signup-container {
       margin: 5px auto auto;
