--- a/B2CSignup.html
+++ b/B2CSignup.html
@@ -20,9 +20,9 @@
   </head>
   <style>
     body {
-      background: url("https://dev.jobcommander.com/static/media/splash.46cf87c246839e946257.jpg");
+/*       background: url("https://dev.jobcommander.com/static/media/splash.46cf87c246839e946257.jpg");
       background-repeat: no-repeat;
-    background-size: cover;
+    background-size: cover; */
       font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto,
         Helvetica Neue, Arial, Noto Sans, sans-serif, Apple Color Emoji,
         Segoe UI Emoji, Segoe UI Symbol, Noto Color Emoji;
@@ -31,6 +31,19 @@
       align-items: center;
       display: flex;
       justify-content: center;
+    }
+    .container:before{
+       position: absolute;
+    top: 0;
+    left: 0;
+    content: ' ';
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    background-image: url(../../assets/images/landing/splash.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center center;
     }
     .signup-container {
       margin: 5px auto auto;
