--- a/B2CSignup.html
+++ b/B2CSignup.html
@@ -27,12 +27,12 @@
         Helvetica Neue, Arial, Noto Sans, sans-serif, Apple Color Emoji,
         Segoe UI Emoji, Segoe UI Symbol, Noto Color Emoji;
     }
-    .container{
+    .auth-container{
       align-items: center;
       display: flex;
       justify-content: center;
     }
-    .container:before{
+    .auth-container:before{
        position: absolute;
     top: 0;
     left: 0;
@@ -141,7 +141,7 @@
   </style>
 
   <body>
-    <div class="container">
+    <div class="auth-container">
         <div class="signup-container" data-tenant-branding-background-color="true">
       <div class="panel panel-default">
         <div class="panel-body">
