--- a/B2CSignup.html
+++ b/B2CSignup.html
@@ -29,9 +29,10 @@
     }
     .auth-container{
       align-items: center;
-      display: flex;
-      justify-content: center;
-    }
+    display: flex;
+    height: 100vh;
+    justify-content: center;
+}
     .auth-container:before{
        position: absolute;
     top: 0;
