--- a/B2CSignup.html
+++ b/B2CSignup.html
@@ -35,7 +35,7 @@
     width: 100%;
     height: 100%;
     z-index: -1;
-    background-image: url(../../assets/images/landing/splash.jpg);
+    background-image: url("https://dev.jobcommander.com/static/media/splash.46cf87c246839e946257.jpg");
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center center;
