--- a/B2CSignup.html
+++ b/B2CSignup.html
@@ -49,7 +49,7 @@
 }
     
     .signup-container {
-      margin: 5px auto auto;
+      margin:auto auto;
     }
     .panel-body p {
       text-align: center;
