--- a/B2CSignup.html
+++ b/B2CSignup.html
@@ -66,10 +66,7 @@
     .heading h1 {
       display: none;
     }
-    .intro p {
-      display: none;
-    }
-    .intro h2 {
+    .intro p , .intro h2 {
       display: none;
     }
     .attr ul {
@@ -79,42 +76,19 @@
     .attr li {
       margin-bottom: 6px;
     }
-    .attrEntry label {
+    .attrEntry label , .entry-item label{
       display: none;
     }
-    .entry-item label {
+    .attrEntry a ,  .entry-item a {
       display: none;
     }
-    .attrEntry a {
-      display: none;
-    }
-    .entry-item a {
-      display: none;
-    }
-    .attrEntry input {
+    .attrEntry input , .attrEntry select,  .entry-item input, .entry-item select {
       border-radius: 4px;
       padding: 7px;
       border: 1px solid #d9d9d9;
       width: 100%;
     }
-    .attrEntry select {
-      border-radius: 4px;
-      padding: 7px;
-      border: 1px solid #d9d9d9;
-      width: 100%;
-      margin-bottom: 6px;
-    }
-    .entry-item input {
-      border-radius: 4px;
-      padding: 7px;
-      border: 1px solid #d9d9d9;
-      width: 100%;
-    }
-    .entry-item select {
-      border-radius: 4px;
-      padding: 7px;
-      border: 1px solid #d9d9d9;
-      width: 100%;
+    .attrEntry select, .entry-item input, .entry-item select {
       margin-bottom: 6px;
     }
     .divider h2 {
