--- a/B2CSignup.html
+++ b/B2CSignup.html
@@ -79,7 +79,7 @@
     .attrEntry label , .entry-item label{
       display: none;
     }
-    .attrEntry a ,  .entry-item a {
+    .attrEntry a  {
       display: none;
     }
     .attrEntry input , .attrEntry select,  .entry-item input, .entry-item select {
