--- a/B2CSignup.html
+++ b/B2CSignup.html
@@ -20,36 +20,36 @@
   </head>
   <style>
     body {
-/*       background: url("https://dev.jobcommander.com/static/media/splash.46cf87c246839e946257.jpg");
+      /*       background: url("https://dev.jobcommander.com/static/media/splash.46cf87c246839e946257.jpg");
       background-repeat: no-repeat;
     background-size: cover; */
       font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto,
         Helvetica Neue, Arial, Noto Sans, sans-serif, Apple Color Emoji,
         Segoe UI Emoji, Segoe UI Symbol, Noto Color Emoji;
     }
-    .auth-container:before{
-       position: absolute;
-    top: 0;
-    left: 0;
-    content: ' ';
-    width: 100%;
-    height: 100%;
-    z-index: -1;
-    background-image: url("https://dev.jobcommander.com/static/media/splash.46cf87c246839e946257.jpg");
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center center;
+    .auth-container:before {
+      position: absolute;
+      top: 0;
+      left: 0;
+      content: " ";
+      width: 100%;
+      height: 100%;
+      z-index: -1;
+      background-image: url("https://dev.jobcommander.com/static/media/splash.46cf87c246839e946257.jpg");
+      background-size: cover;
+      background-repeat: no-repeat;
+      background-position: center center;
     }
-    .auth-container{
+    .auth-container {
       align-items: center;
-    display: flex;
-    height: 100vh;
-    justify-content: center;
-          overflow: auto;
-}
-    
+      display: flex;
+      height: 100vh;
+      justify-content: center;
+      overflow: auto;
+    }
+
     .signup-container {
-      margin:auto auto;
+      margin: auto auto;
     }
     .panel-body p {
       text-align: center;
@@ -66,7 +66,8 @@
     .heading h1 {
       display: none;
     }
-    .intro p , .intro h2 {
+    .intro p,
+    .intro h2 {
       display: none;
     }
     .attr ul {
@@ -76,19 +77,25 @@
     .attr li {
       margin-bottom: 6px;
     }
-    .attrEntry label , .entry-item label{
+    .attrEntry label,
+    .entry-item label {
       display: none;
     }
-    .attrEntry a  {
+    .attrEntry a {
       display: none;
     }
-    .attrEntry input , .attrEntry select,  .entry-item input, .entry-item select {
+    .attrEntry input,
+    .attrEntry select,
+    .entry-item input,
+    .entry-item select {
       border-radius: 4px;
       padding: 7px;
       border: 1px solid #d9d9d9;
       width: 100%;
     }
-    .attrEntry select, .entry-item input, .entry-item select {
+    .attrEntry select,
+    .entry-item input,
+    .entry-item select {
       margin-bottom: 6px;
     }
     .divider h2 {
@@ -119,16 +126,18 @@
 
   <body>
     <div class="auth-container">
-        <div class="signup-container" data-tenant-branding-background-color="true">
-      <div class="panel panel-default">
-        <div class="panel-body">
-          <p>Join JobCommander</p>
+      <div
+        class="signup-container"
+        data-tenant-branding-background-color="true"
+      >
+        <div class="panel panel-default">
+          <div class="panel-body">
+            <p>Join JobCommander</p>
 
-          <div id="api"></div>
+            <div id="api"></div>
+          </div>
         </div>
       </div>
     </div>
-    </div>
-    
   </body>
 </html>
