--- a/B2CLogin.html
+++ b/B2CLogin.html
@@ -4,6 +4,14 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <script
+      crossorigin
+      src="https://unpkg.com/react@18/umd/react.development.js"
+    ></script>
+    <script
+      crossorigin
+      src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"
+    ></script>
     <link
       href="https://ajax.aspnetcdn.com/ajax/bootstrap/3.3.5/css/bootstrap.min.css"
       rel="stylesheet"
@@ -12,101 +20,123 @@
   </head>
   <style>
     body {
-      background: url("https://dev.jobcommander.com/static/media/splash.46cf87c246839e946257.jpg");
-      background-size: cover;
+      /*       background: url("https://dev.jobcommander.com/static/media/splash.46cf87c246839e946257.jpg");
+      background-repeat: no-repeat;
+    background-size: cover; */
       font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto,
         Helvetica Neue, Arial, Noto Sans, sans-serif, Apple Color Emoji,
         Segoe UI Emoji, Segoe UI Symbol, Noto Color Emoji;
     }
-    .signup-container {
-      display: flex;
-      justify-content: center;
+    .auth-container:before {
+      position: absolute;
+      top: 0;
+      left: 0;
+      content: " ";
+      width: 100%;
+      height: 100%;
+      z-index: -1;
+      background-image: url("https://dev.jobcommander.com/static/media/splash.46cf87c246839e946257.jpg");
+      background-size: cover;
+      background-repeat: no-repeat;
+      background-position: center center;
+    }
+    .auth-container {
       align-items: center;
+      display: flex;
       height: 100vh;
+      justify-content: center;
+      overflow: auto;
     }
-    .panel {
-      border-radius: 4px;
-    }
-    .panel-body {
-      padding: 15px;
+
+    .signup-container {
+      margin: auto auto;
     }
     .panel-body p {
       text-align: center;
       font-size: 16px;
       font-weight: 600;
-      margin-top: 20px;
     }
-
+    .panel {
+      border-radius: 4px;
+      margin-top: 5px;
+    }
+    .panel-body {
+      padding: 15px;
+    }
     .heading h1 {
       display: none;
     }
+    .intro p,
     .intro h2 {
       display: none;
     }
-    .entry-item {
-      margin: 10px;
+    .attr ul {
+      list-style-type: none;
+      padding-left: 0px;
     }
-    .entry-item input {
-      font-size: 16px;
+    .attr li {
+      margin-bottom: 6px;
+    }
+    .attrEntry label,
+    .entry-item label {
+      display: none;
+    }
+    .attrEntry a {
+      display: none;
+    }
+    .attrEntry input,
+    .attrEntry select,
+    .entry-item input,
+    .entry-item select {
       border-radius: 4px;
       padding: 7px;
       border: 1px solid #d9d9d9;
       width: 100%;
     }
-    .error p {
-      font-size: 12px;
-      color: red;
-      text-align: left;
-    }
-    .entry-item .password-label a {
-      font-size: 16px;
-    }
-    .entry-item label {
-      display: none;
-    }
-    #next {
-     height: 34px;
-    width: 80px;
-    font-size: 16px;
-    background-color: rgba(19, 167, 61, 100);
-    border: 0px;
-    color: white;
-    border-radius: 4px;
-    margin: 10px 0px;
-    padding: 5px;
+    .attrEntry select,
+    .entry-item input,
+    .entry-item select {
+      margin-bottom: 6px;
     }
     .divider h2 {
-      font-size: 18px;
-      text-align: center;
-      font-weight: 100;
       margin-top: 0px;
+      text-align: center;
+      font-size: 16px;
     }
     .buttons {
       display: flex;
       justify-content: right;
-      margin-right: 12px;
     }
-    .create p {
+    .buttons button {
       font-size: 16px;
+      background-color: rgba(19, 167, 61, 100);
+      border: 0px;
+      color: white;
+      border-radius: 4px;
+      margin: 10px 4px;
+      padding: 5px 10px;
     }
     .create p a {
       margin-left: 10px;
     }
-    .text-link {
-      font-size: 18px;
+    .error {
+      color: red;
     }
   </style>
 
   <body>
-    <div class="signup-container" data-tenant-branding-background-color="true">
-      <div class="panel panel-default">
-        <div class="panel-body">
-          <p>Welcome Back!</p>
-
-          <div id="api"></div>
+    <div class="auth-container">
+      <div
+        class="signup-container"
+        data-tenant-branding-background-color="true"
+      >
+        <div class="panel panel-default">
+          <div class="panel-body">
+            <p>Welcome Back!</p>
+            <div id="api"></div>
+          </div>
         </div>
       </div>
     </div>
   </body>
 </html>
-
