--- a/B2CGeneral.html
+++ b/B2CGeneral.html
@@ -59,6 +59,7 @@
     .panel {
       border-radius: 4px;
       margin-top: 5px;
+      min-width:350px;
     }
     .panel-body {
       padding: 15px;
